--- a/style.css
+++ b/style.css
@@ -7,7 +7,44 @@
   z-index: 10;
 }
 
-#first-img {
+.Font-1 {
+  top: 30%;
+  right: 3%;
+  position: absolute;
+  color: rgb(221, 221, 221);
+  font-size: 130px;
+
+  animation: start-left 2.5s;
+  animation-fill-mode: forwards;
+  animation-delay: 1.8s;
+}
+
+.Font-2 {
+  bottom: 0;
+  left: 5%;
+  position: absolute;
+  color: rgb(221, 221, 221);
+  font-size: 200px;
+  z-index: 13;
+
+  animation: start-right 2.5s;
+  animation-fill-mode: forwards;
+  animation-delay: 1.8s;
+}
+
+#wallpaper-top {
+  position: absolute;
+  top: 0;
+  left: 40%;
+  height: 100%;
+  width: auto;
+  z-index: 12;
+  animation: start-right 2s;
+  animation-fill-mode: forwards;
+  animation-delay: 1.8s;
+}
+
+.wallpaper-div {
   width: 100%;
   height: 100vh;
   border-radius: 5px;
@@ -15,6 +52,9 @@
   position: sticky;
   will-change: transform;
   transform: scale(1);
+  overflow: hidden;
+  background: rgb(172, 172, 172);
+  z-index: 9;
 }
 
 header {
@@ -32,23 +72,18 @@ header {
   transform: scale(1);
 }
 
-#about-button {
-  background: none;
-  border: none;
-  font-family: Main-Bold;
-  font-size: 18px;
-  color: rgb(190, 190, 190);
-}
-
-#about-button:hover {
-  color: white;
-}
-
 .header-links {
   position: absolute;
+  display: flex;
+  align-items: center;
   top: 50px;
   display: flex;
-  gap: 40px;
+  gap: 30px;
+  opacity: 0;
+
+  animation: Anim-Fade 0.7s ease-out;
+  animation-fill-mode: forwards;
+  animation-delay: 3.5s;
 }
 
 /* Add a delay to each letter for the wave effect */
@@ -201,14 +236,8 @@ footer {
   padding: 50px;
 }
 
-.top-button {
-  position: absolute;
-  left: 2%;
-  top: -20%;
-}
-
 #logo-footer {
-  height: 100px;
+  height: 25px;
   width: auto;
   margin-right: 40px;
   margin-top: 5px;
