--- a/animations.css
+++ b/animations.css
@@ -38,6 +38,8 @@ body.loaded {
   background: rgba(236, 236, 238, 0.253);
   height: 3px;
   border-radius: 7px;
+  animation: disappear 2s ease;
+  animation-fill-mode: forwards;
 }
 
 .progress {
@@ -47,7 +49,7 @@ body.loaded {
   border-radius: 7px;
   background: rgb(255, 255, 255);
   transition: 0.5s;
-  animation: loading1274 2s ease;
+  animation: loading1274 2s ease, disappear 2s ease;
   animation-fill-mode: forwards;
 }
 
@@ -69,6 +71,50 @@ body.loaded {
   }
 
   100% {
+    width: 100%;
+  }
+}
+
+@keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+/* Image Animation */
+
+.preloader-img-div {
+  height: 50%;
+  width: 40%;
+  transform: translateY(-200vh);
+  background: url(./pictures/rick-rothenberg-AWfnhPlNGnM-unsplash.jpg) center;
+  background-repeat: none;
+  background-size: cover;
+  animation: imgStart 2s;
+  animation-fill-mode: forwards;
+  animation-delay: 2s;
+}
+
+@keyframes imgStart {
+  0% {
+    transform: translateY(-200vh);
+    height: 50%;
+    width: 40%;
+  }
+  50% {
+    transform: translateY(0);
+    height: 50%;
+    width: 40%;
+  }
+  100% {
+    transform: translateY(0);
+    height: 100%;
     width: 100%;
   }
 }
@@ -155,6 +201,8 @@ body.loaded {
   }
 }
 
+/*
+
 .about-me-img {
   display: flex;
   align-items: center;
@@ -222,4 +270,216 @@ body.loaded {
 
 .puffer {
   height: 200px;
+}
+
+*/
+
+.section {
+  margin-top: 100px;
+}
+
+.inner {
+  display: flex;
+  margin-left: 30px;
+  align-items: center;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.icon {
+  height: 20px;
+  margin-left: 5px;
+}
+
+.about-me-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 35%;
+  padding: 50px;
+}
+
+.about-me-information {
+  width: 65%;
+  padding: 50px 50px 0 50px;
+  padding-top: 200px;
+}
+
+.tech h2,
+.contact h2,
+.experience h2 {
+  margin-bottom: 20px;
+  margin-top: 150px;
+}
+
+.column {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.margin0 {
+  margin: 0;
+  margin-left: 30px;
+}
+
+.puffer {
+  height: 200px;
+}
+
+/* Animation Wallpaper Subject Line */
+
+.wallpaper-div h1 span:nth-child(1) {
+  animation-delay: 4s;
+}
+.wallpaper-div h1 span:nth-child(2) {
+  animation-delay: 4.1s;
+}
+.wallpaper-div h1 span:nth-child(3) {
+  animation-delay: 4.15s;
+}
+.wallpaper-div h1 span:nth-child(4) {
+  animation-delay: 4.2s;
+}
+.wallpaper-div h1 span:nth-child(5) {
+  animation-delay: 4.25s;
+}
+.wallpaper-div h1 span:nth-child(6) {
+  animation-delay: 4.3s;
+}
+.wallpaper-div h1 span:nth-child(7) {
+  animation-delay: 4.35s;
+}
+.wallpaper-div h1 span:nth-child(8) {
+  animation-delay: 4.4s;
+}
+.wallpaper-div h1 span:nth-child(9) {
+  animation-delay: 4.45s;
+}
+.wallpaper-div h1 span:nth-child(10) {
+  animation-delay: 4.5s;
+}
+.wallpaper-div h1 span:nth-child(11) {
+  animation-delay: 4.55s;
+}
+.wallpaper-div h1 span:nth-child(12) {
+  animation-delay: 4.6s;
+}
+.wallpaper-div h1 span:nth-child(13) {
+  animation-delay: 4.65s;
+}
+.wallpaper-div h1 span:nth-child(14) {
+  animation-delay: 4.7s;
+}
+.wallpaper-div h1 span:nth-child(15) {
+  animation-delay: 4.75s;
+}
+.wallpaper-div h1 span:nth-child(16) {
+  animation-delay: 4.8s;
+}
+.wallpaper-div h1 span:nth-child(17) {
+  animation-delay: 4.85s;
+}
+
+/*Frontend */
+
+.wallpaper-div h4 span:nth-child(1) {
+  animation-delay: 4s;
+}
+.wallpaper-div h4 span:nth-child(2) {
+  animation-delay: 4.1s;
+}
+.wallpaper-div h4 span:nth-child(3) {
+  animation-delay: 4.15s;
+}
+.wallpaper-div h4 span:nth-child(4) {
+  animation-delay: 4.2s;
+}
+.wallpaper-div h4 span:nth-child(5) {
+  animation-delay: 4.25s;
+}
+.wallpaper-div h4 span:nth-child(6) {
+  animation-delay: 4.3s;
+}
+.wallpaper-div h4 span:nth-child(7) {
+  animation-delay: 4.35s;
+}
+.wallpaper-div h4 span:nth-child(8) {
+  animation-delay: 4.4s;
+}
+.wallpaper-div h4 span:nth-child(9) {
+  animation-delay: 4.45s;
+}
+.wallpaper-div h4 span:nth-child(10) {
+  animation-delay: 4.5s;
+}
+.wallpaper-div h4 span:nth-child(11) {
+  animation-delay: 4.55s;
+}
+.wallpaper-div h4 span:nth-child(12) {
+  animation-delay: 4.6s;
+}
+.wallpaper-div h4 span:nth-child(13) {
+  animation-delay: 4.65s;
+}
+.wallpaper-div h4 span:nth-child(14) {
+  animation-delay: 4.7s;
+}
+.wallpaper-div h4 span:nth-child(15) {
+  animation-delay: 4.75s;
+}
+.wallpaper-div h4 span:nth-child(16) {
+  animation-delay: 4.8s;
+}
+.wallpaper-div h4 span:nth-child(17) {
+  animation-delay: 4.85s;
+}
+
+.wallpaper-div h1 span {
+  opacity: 0;
+  transform: translateY(-100px);
+  display: inline-block;
+  animation: waveBig 1s ease forwards;
+}
+
+.wallpaper-div h4 span {
+  opacity: 0;
+  transform: translateY(20px);
+  display: inline-block;
+  animation: wave 1s ease forwards;
+}
+
+@keyframes wave {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes waveBig {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Rotate animation dot */
+
+@keyframes rotate {
+  0% {
+    transform: rotateY(0deg);
+  }
+  25% {
+    transform: rotateY(360deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
 }
