--- a/style.css
+++ b/style.css
@@ -7,29 +7,36 @@
   z-index: 10;
 }
 
-.Font-1 {
-  top: 30%;
-  right: 3%;
-  position: absolute;
-  color: rgb(221, 221, 221);
-  font-size: 130px;
-
-  animation: start-left 2.5s;
-  animation-fill-mode: forwards;
-  animation-delay: 1.8s;
+.quad {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
-.Font-2 {
-  bottom: 0;
-  left: 5%;
+.Font-1 {
   position: absolute;
-  color: rgb(221, 221, 221);
-  font-size: 200px;
+  top: 0px;
+  left: 0px;
+  color: rgb(255, 255, 255);
+  font-size: 16px;
   z-index: 13;
+  line-height: 10vh;
 
   animation: start-right 2.5s;
   animation-fill-mode: forwards;
-  animation-delay: 1.8s;
+  animation-delay: 3.8s;
+}
+
+.Font-2 {
+  color: rgb(255, 255, 255);
+  font-size: 14vh;
+  z-index: 13;
+  line-height: 18vh;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.247);
+  transform: translateX(-20px);
 }
 
 #wallpaper-top {
@@ -53,8 +60,13 @@
   will-change: transform;
   transform: scale(1);
   overflow: hidden;
-  background: rgb(172, 172, 172);
+  background: url(./pictures/rick-rothenberg-AWfnhPlNGnM-unsplash.jpg) no-repeat
+    center;
+  background-size: cover;
   z-index: 9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 header {
@@ -76,66 +88,18 @@ header {
   position: absolute;
   display: flex;
   align-items: center;
-  top: 50px;
+  top: 30px;
   display: flex;
   gap: 30px;
   opacity: 0;
 
   animation: Anim-Fade 0.7s ease-out;
   animation-fill-mode: forwards;
-  animation-delay: 3.5s;
+  animation-delay: 5.5s;
 }
 
-/* Add a delay to each letter for the wave effect */
-.subject-line h1 span:nth-child(1) {
-  animation-delay: 0s;
-}
-.subject-line h1 span:nth-child(2) {
-  animation-delay: 0.1s;
-}
-.subject-line h1 span:nth-child(3) {
-  animation-delay: 0.15s;
-}
-.subject-line h1 span:nth-child(4) {
-  animation-delay: 0.2s;
-}
-.subject-line h1 span:nth-child(5) {
-  animation-delay: 0.25s;
-}
-.subject-line h1 span:nth-child(6) {
-  animation-delay: 0.3s;
-}
-.subject-line h1 span:nth-child(7) {
-  animation-delay: 0.35s;
-}
-.subject-line h1 span:nth-child(8) {
-  animation-delay: 0.4s;
-}
-.subject-line h1 span:nth-child(9) {
-  animation-delay: 0.45s;
-}
-
-.subject-line {
-  position: relative;
-}
-
-.subject-line h1 span {
-  opacity: 0;
-  transform: translateY(20px);
-  display: inline-block;
-  animation: wave 1s ease forwards;
-  animation-delay: 3s;
-}
-
-@keyframes wave {
-  0% {
-    opacity: 0;
-    transform: translateY(-20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
+#header-dot {
+  animation: rotate 3s ease-out infinite;
 }
 
 .me-layout {
