--- a/basics.css
+++ b/basics.css
@@ -68,7 +68,7 @@ h1 {
   font-size: 56px;
   color: white;
   letter-spacing: 2px;
-  font-weight: 400;
+  font-weight: bold;
 }
 
 h2 {
@@ -124,7 +124,7 @@ a:hover {
 }
 
 .gradient-purple {
-  background: -webkit-linear-gradient(100deg, #ffffff 20%, #414141);
+  background: -webkit-linear-gradient(120deg, #556eff, #bf87e4);
   -webkit-background-clip: text;
   background-clip: none;
   -webkit-text-fill-color: transparent;
@@ -150,4 +150,8 @@ a:hover {
 
 .text-none:hover {
   text-decoration: none;
+}
+
+.color-black {
+  color: rgb(17, 17, 17);
 }
