--- a/assets.css
+++ b/assets.css
@@ -1,5 +1,27 @@
 /* About Button Header */
 
+.nav-button {
+  padding: 20px;
+}
+
+.nav-button p {
+  color: #161618;
+}
+
+.nav-button:hover {
+  cursor: pointer;
+}
+
+.grey {
+  color: rgb(75, 75, 75);
+}
+
+.grey:hover {
+  color: rgb(44, 44, 44);
+}
+
+/* All Buttons */
+
 #about-button {
   background: none;
   border: none;
