--- a/animations.css
+++ b/animations.css
@@ -222,79 +222,6 @@ body.loaded {
   }
 }
 
-/*
-
-.about-me-img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 35%;
-  padding: 50px;
-}
-
-.about-me-information {
-  width: 65%;
-  padding: 0 50px;
-  padding-top: 10%;
-}
-
-.sideinfo {
-  margin-top: 150px;
-}
-
-.sideinfo-inner {
-  margin-top: 30px;
-  margin-left: 30px;
-}
-
-.experience {
-  margin-top: 100px;
-}
-
-.experience-inner {
-  margin: 30px;
-}
-
-.experience-inner h5 {
-  color: grey;
-}
-
-.contact {
-  margin-top: 100px;
-}
-
-.contact-inner {
-  display: flex;
-  margin-left: 30px;
-  align-items: center;
-  gap: 20px;
-}
-
-.tech {
-  margin-top: 100px;
-}
-
-.tech-inner {
-  display: flex;
-  margin-left: 30px;
-  align-items: center;
-  gap: 20px;
-}
-.margin-top {
-  margin-top: 30px;
-}
-
-#comp_icon {
-  margin-left: 5px;
-}
-
-.puffer {
-  height: 200px;
-}
-
-*/
-
 .section {
   margin-top: 100px;
 }
@@ -503,4 +430,87 @@ body.loaded {
   100% {
     transform: rotateY(360deg);
   }
+}
+
+/* Coming soon.. */
+
+.in-work {
+  position: relative;
+  font-size: 16px;
+  width: 5.5em;
+  height: 5.5em;
+}
+
+.in-work:before {
+  content: "";
+  position: absolute;
+  transform: translate(-50%, -50%) rotate(45deg);
+  height: 100%;
+  width: 4px;
+  background: #0a0a0a;
+  left: 50%;
+  top: 50%;
+}
+
+.in-work:after {
+  content: "";
+  position: absolute;
+  left: 0.2em;
+  bottom: 0.18em;
+  width: 1em;
+  height: 1em;
+  background-color: rgb(174, 0, 255);
+  border-radius: 15%;
+  animation: rollingRock 2.5s cubic-bezier(0.79, 0, 0.47, 0.97) infinite;
+}
+
+@keyframes rollingRock {
+  0% {
+    transform: translate(0, -1em) rotate(-45deg);
+  }
+
+  5% {
+    transform: translate(0, -1em) rotate(-50deg);
+  }
+
+  20% {
+    transform: translate(1em, -2em) rotate(47deg);
+  }
+
+  25% {
+    transform: translate(1em, -2em) rotate(45deg);
+  }
+
+  30% {
+    transform: translate(1em, -2em) rotate(40deg);
+  }
+
+  45% {
+    transform: translate(2em, -3em) rotate(137deg);
+  }
+
+  50% {
+    transform: translate(2em, -3em) rotate(135deg);
+  }
+
+  55% {
+    transform: translate(2em, -3em) rotate(130deg);
+  }
+
+  70% {
+    transform: translate(3em, -4em) rotate(217deg);
+  }
+
+  75% {
+    transform: translate(3em, -4em) rotate(220deg);
+  }
+
+  100% {
+    transform: translate(0, -1em) rotate(-225deg);
+  }
+}
+
+.coming-soon {
+  color: #7a7a7a;
+  margin-bottom: 30px;
 }
