foody basket fix and small design fixes

--- a/animations.css
+++ b/animations.css
@@ -27,7 +27,7 @@ body.loaded {
 /* Mouse Move Animation */
 
 :root {
-  --color-trail: #131313;
+  --color-trail: #b6b6b6;
 }
 
 .trail {
@@ -275,6 +275,37 @@ body.loaded {
   height: 200px;
 }
 
+@media (max-width: 1200px) {
+  .overlay {
+    flex-direction: column;
+  }
+  .about-me-information {
+    width: 95%;
+    padding: 50px 50px 0 50px;
+    padding-top: -100px;
+  }
+  #img-me {
+    margin-left: 100px;
+  }
+}
+
+@media (max-width: 960px) {
+  .about-me-img {
+    width: 70%;
+  }
+}
+
+@media (max-width: 555px) {
+  .about-me-img {
+    width: 90%;
+  }
+  #img-me {
+    width: 250px;
+    height: auto;
+    margin-top: 200px;
+  }
+}
+
 /* Animation Wallpaper Subject Line */
 
 .wallpaper-div h1 span:nth-child(1) {
@@ -433,82 +464,6 @@ body.loaded {
 }
 
 /* Coming soon.. */
-
-.in-work {
-  position: relative;
-  font-size: 16px;
-  width: 5.5em;
-  height: 5.5em;
-}
-
-.in-work:before {
-  content: "";
-  position: absolute;
-  transform: translate(-50%, -50%) rotate(45deg);
-  height: 100%;
-  width: 4px;
-  background: #0a0a0a;
-  left: 50%;
-  top: 50%;
-}
-
-.in-work:after {
-  content: "";
-  position: absolute;
-  left: 0.2em;
-  bottom: 0.18em;
-  width: 1em;
-  height: 1em;
-  background-color: rgb(174, 0, 255);
-  border-radius: 15%;
-  animation: rollingRock 2.5s cubic-bezier(0.79, 0, 0.47, 0.97) infinite;
-}
-
-@keyframes rollingRock {
-  0% {
-    transform: translate(0, -1em) rotate(-45deg);
-  }
-
-  5% {
-    transform: translate(0, -1em) rotate(-50deg);
-  }
-
-  20% {
-    transform: translate(1em, -2em) rotate(47deg);
-  }
-
-  25% {
-    transform: translate(1em, -2em) rotate(45deg);
-  }
-
-  30% {
-    transform: translate(1em, -2em) rotate(40deg);
-  }
-
-  45% {
-    transform: translate(2em, -3em) rotate(137deg);
-  }
-
-  50% {
-    transform: translate(2em, -3em) rotate(135deg);
-  }
-
-  55% {
-    transform: translate(2em, -3em) rotate(130deg);
-  }
-
-  70% {
-    transform: translate(3em, -4em) rotate(217deg);
-  }
-
-  75% {
-    transform: translate(3em, -4em) rotate(220deg);
-  }
-
-  100% {
-    transform: translate(0, -1em) rotate(-225deg);
-  }
-}
 
 .coming-soon {
   color: #7a7a7a;
