--- a/05_Bestellapp Lieferando Edit/style.css
+++ b/05_Bestellapp Lieferando Edit/style.css
@@ -36,13 +36,34 @@ header {
 
 .side-track {
   display: flex;
+  flex-direction: column;
   width: 350px;
+  flex: 1;
   position: fixed;
   right: 0;
   top: 0;
   bottom: 0;
   background: rgb(17, 17, 17);
   border-left: 1px solid rgb(27, 27, 27);
+  padding-bottom: 120px;
+  overflow: auto;
+  scrollbar-width: none;
+}
+
+.side-track::-webkit-scrollbar {
+  display: none;
+}
+
+.order-section {
+  width: 100%;
+  height: 120px;
+  display: flex;
+
+  align-items: center;
+  justify-content: space-evenly;
+  position: relative;
+  margin-top: 50px;
+  background: rgb(17, 17, 17);
 }
 
 .main-pic {
@@ -170,17 +191,6 @@ header {
   height: 40px;
   width: auto;
   margin: 0 5px;
-}
-
-.order-section {
-  width: 100%;
-  height: 120px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  position: absolute;
-  bottom: 20px;
-  right: 0px;
 }
 
 @media (max-width: 1050px) {
