--- a/style.css
+++ b/style.css
@@ -21,12 +21,11 @@
 
 .Font-1 {
   position: absolute;
-  top: 0px;
+  top: 35px;
   left: 30px;
   color: #161618;
   font-size: 16px;
   z-index: 13;
-  line-height: 10vh;
 
   animation: start-right 2.5s;
   animation-fill-mode: forwards;
@@ -167,13 +166,13 @@ header {
 
 .p3 {
   background: url(./pictures/img-project/Rock.png);
-  background-position: center;
+  background-position: center center;
   background-size: cover;
 }
 
 .p4 {
   background: url(./pictures/img-project/coming-soon.png);
-  background-position: center;
+  background-position: center center;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -183,8 +182,23 @@ header {
 
 .p5 {
   background: url(./pictures/img-project/coming-soon.png);
-  background-position: center;
+  background-position: center center;
   background-size: cover;
+}
+
+@media (max-width: 650px) {
+  .p1 {
+    background-size: 300%;
+  }
+  .p2 {
+    background-size: 300%;
+  }
+  .p3 {
+    background-size: 300%;
+  }
+  .p4 {
+    background-size: 300%;
+  }
 }
 
 .information-div {
@@ -258,6 +272,48 @@ footer {
   width: 1px;
   background: rgb(97, 97, 97);
 }
+
+@media (max-width: 950px) {
+  .legals {
+    margin: 0;
+  }
+
+  .socials {
+    margin: 0;
+  }
+}
+
+@media (max-width: 640px) {
+  .legals {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+  }
+
+  footer {
+    justify-content: center;
+  }
+
+  .top-button {
+    margin-left: 20px;
+  }
+
+  .socials {
+    margin: 0;
+    padding: 0;
+  }
+  .copyright-link {
+    display: none;
+  }
+  .divide {
+    display: none;
+  }
+  .legals {
+    display: none;
+  }
+}
+
+/* global Querys */
 
 @media (max-width: 1281px) {
   .Font-2 {
